--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '24.0.6'
 services:
 assignment1:
   build: .
-  container_name: a1
+  container_name: my/python
   ports:
   - "80:8080"
   volumes:
